<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Hello"
        android:textSize="50sp"
        android:fontFamily="@font/moonbright"
        android:textColor="@color/black"
        android:paddingRight="30sp"
        android:paddingLeft="30sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/MeditationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:backgroundTint="@color/spruceGreen"
        android:text="@string/Meditation_Button"
        android:onClick="MeditationButtonPressed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Hello" />
    <Button
        android:id="@+id/AffirmationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="20sp"
        android:backgroundTint="@color/gray"
        android:textColor="@color/black"
        android:textSize="20sp"

        android:text="@string/Affirmation_Button"

        android:onClick="AffirmationButtonPressed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MeditationButton" />
    <Button
        android:id="@+id/SilentMeditationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="10sp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/Silent_Mediation_button"
        android:backgroundTint="@color/soil"
        android:onClick="SilentMeditationButtonPressed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AffirmationButton" />

    <Button
        android:id="@+id/SleepMeditation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="20sp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/Sleep_meditation_Button"
        android:backgroundTint="@color/earthyGreen"
        android:onClick="SleepMeditationButtonPressed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SilentMeditationButton" />

</androidx.constraintlayout.widget.ConstraintLayout>